# fep3_sdk

./: CMakeLists.txt  Jenkinsfile  README.md  fep3_sdk-config.cmake
doc/: CMakeLists.txt  changelog.md  fep2_change_log.txt
doc/license/: CMakeLists.txt
examples/: CMakeLists.txt
examples/src/easy_core_example_element/: CMakeLists.txt  core_receiver_main.cpp  core_sender_main.cpp  example_commandline_helper.hpp
examples/src/easy_cpp_example_datajob/: CMakeLists.txt  cpp_receiver_main.cpp  cpp_sender_main.cpp  example_ddl_types.h
examples/src/logging_example/: CMakeLists.txt  logging_participant.cpp  logging_system.cpp
examples/src/rpc_service_bus/: CMakeLists.txt  demo_rpc_client.cpp  demo_rpc_service.cpp  demo_rpc_service.json
scripts/cmake/: enable_multicore_compilation.cmake  use_integrated_debug_symbols.cmake
test/private/install_complete/: reference.yaml
